@@ -33,6 +33,7 @@ files
     ../../imgui.cpp
     ../../imgui_demo.cpp
     ../../imgui_draw.cpp
+    ../../imgui_tables.cpp
     ../../imgui_widgets.cpp
     ../../imconfig.h
     ../../imgui.h
