@@ -13,5 +13,6 @@
 #include "../../imgui.cpp"
 #include "../../imgui_demo.cpp"
 #include "../../imgui_draw.cpp"
+#include "../../imgui_tables.cpp"
 #include "../../imgui_widgets.cpp"
 #endif
